// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing rendering CustomerWidget should invoke handleCustomer 1`] = `
<div>
  <div
    class="container new_bid"
  >
    <form>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="title-type"
          >
            Данные заказчика
          </div>
          <div
            class="information-alert"
          >
            <div
              class="information-icon"
            >
              <span
                class="image-icons point"
              />
            </div>
            <div
              class="information-text"
            >
              <div
                class="information"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="form-group"
          >
            <label
              class="radio-inline"
              title=""
            >
              <input
                checked=""
                name="Customer[isLegalPerson]"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="radio-inline"
              title=""
            >
              <input
                name="Customer[isLegalPerson]"
                type="radio"
                value="1"
              />
            </label>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            id="individual"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[lastName]"
                      class="form-control"
                      id="Customer[lastName]"
                      name="Customer[lastName]"
                      type="text"
                      value="Тест"
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[firstName]"
                      class="form-control"
                      id="Customer[firstName]"
                      name="Customer[firstName]"
                      type="text"
                      value="Тест"
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[middleName]"
                      class="form-control"
                      id="Customer[middleName]"
                      name="Customer[middleName]"
                      type="text"
                      value="Тест"
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <input
                    class="form-control"
                    id="Customer[iin]"
                    name="Customer[iin]"
                    style="background-color: rgb(255, 255, 255);"
                    type="text"
                    value="050140004440"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-group"
              >
                <div />
                <span
                  class="input-group-empty"
                >
                  <input
                    autocomplete="Customer[address]"
                    class="form-control"
                    id="Customer[address]"
                    name="Customer[address]"
                    type="text"
                    value="Тест"
                  />
                  <span
                    class="input-group-addon-empty"
                  />
                </span>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-group"
              >
                <input
                  class="form-control"
                  id="Customer[phoneNumber]"
                  name="Customer[phoneNumber]"
                  style="background-color: rgb(255, 255, 255);"
                  type="text"
                  value="(777) 777-7777"
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-12"
            >
              <div>
                <div
                  class="form-group"
                >
                  <label>
                    <span
                      class=""
                    >
                      Доверенность или документ, удостоверяющий полномочия
                    </span>
                  </label>
                  <div>
                    <div
                      style="font-size: 12px;"
                    />
                    <div
                      class="form-group"
                      data-test-id="dropTarget"
                      style="border: 2px dashed #aaa; padding: 10px; cursor: pointer; border-radius: 4px;"
                    >
                      <div
                        style="text-align: center; width: 100%; vertical-align: middle;"
                      >
                        <span
                          class="image-icons plus"
                        />
                      </div>
                    </div>
                    <div
                      class="row"
                    >
                      <div
                        class="col-md-12"
                        style="display: inline-flex;"
                      >
                        <input
                          class="form-control"
                          style="display: none;"
                          type="file"
                        />
                        <div
                          class="full-width"
                        >
                          <input
                            class="form-control form-control"
                            id="ormValidation"
                            readonly=""
                            style="background-color: rgb(255, 255, 255);"
                            type="text"
                            value="test.pdf"
                          />
                        </div>
                        <button
                          class="btn btn-next"
                          formnovalidate=""
                          style="text-transform: uppercase;"
                          type="button"
                        />
                        <button
                          class="btn btn-next"
                          formnovalidate=""
                          style="text-transform: uppercase;"
                          type="button"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="from-line"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-1"
        >
          <a
            class="btn btn-exit "
            href="/ru/profile-page/admin"
            style="text-transform: uppercase;"
          />
        </div>
        <div
          class="col-md-1 col-md-offset-10"
        >
          <button
            class="btn btn-next"
            style="text-transform: uppercase;"
            type="button"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Testing rendering CustomerWidget should render with anotherCustomer error 1`] = `
<div>
  <div
    class="container new_bid"
  >
    <form>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="title-type"
          >
            Данные заказчика
          </div>
          <div
            class="information-alert"
          >
            <div
              class="information-icon"
            >
              <span
                class="image-icons point"
              />
            </div>
            <div
              class="information-text"
            >
              <div
                class="information"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="form-group"
          >
            <label
              class="radio-inline"
              title=""
            >
              <input
                checked=""
                name="Customer[isLegalPerson]"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="radio-inline"
              title=""
            >
              <input
                name="Customer[isLegalPerson]"
                type="radio"
                value="1"
              />
            </label>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            id="individual"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[lastName]"
                      class="form-control"
                      id="Customer[lastName]"
                      name="Customer[lastName]"
                      type="text"
                      value="Тест"
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[firstName]"
                      class="form-control"
                      id="Customer[firstName]"
                      name="Customer[firstName]"
                      type="text"
                      value="Тест"
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[middleName]"
                      class="form-control"
                      id="Customer[middleName]"
                      name="Customer[middleName]"
                      type="text"
                      value="Тест"
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <input
                    class="form-control"
                    id="Customer[iin]"
                    name="Customer[iin]"
                    style="background-color: rgb(255, 255, 255);"
                    type="text"
                    value="050140004440"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-group"
              >
                <div />
                <span
                  class="input-group-empty"
                >
                  <input
                    autocomplete="Customer[address]"
                    class="form-control"
                    id="Customer[address]"
                    name="Customer[address]"
                    type="text"
                    value="Тест"
                  />
                  <span
                    class="input-group-addon-empty"
                  />
                </span>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-group"
              >
                <input
                  class="form-control"
                  id="Customer[phoneNumber]"
                  name="Customer[phoneNumber]"
                  style="background-color: rgb(255, 255, 255);"
                  type="text"
                  value="(777) 777-7777"
                />
              </div>
            </div>
          </div>
          <div>
            <div
              class="title-type"
            />
            <div
              class="information-alert"
            >
              <div
                class="information-icon"
              >
                <span
                  class="image-icons point"
                />
              </div>
              <div
                class="information-text"
              >
                <div
                  class="information"
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-12"
            >
              <div>
                <div
                  class="form-group"
                >
                  <label>
                    <span
                      class=""
                    >
                      Доверенность или документ, удостоверяющий полномочия
                    </span>
                  </label>
                  <div>
                    <div
                      style="font-size: 12px;"
                    />
                    <div
                      class="form-group"
                      data-test-id="dropTarget"
                      style="border: 2px dashed #aaa; padding: 10px; cursor: pointer; border-radius: 4px;"
                    >
                      <div
                        style="text-align: center; width: 100%; vertical-align: middle;"
                      >
                        <span
                          class="image-icons plus"
                        />
                      </div>
                    </div>
                    <div
                      class="row"
                    >
                      <div
                        class="col-md-12"
                        style="display: inline-flex;"
                      >
                        <input
                          class="form-control"
                          style="display: none;"
                          type="file"
                        />
                        <div
                          class="full-width"
                        >
                          <input
                            class="form-control form-control"
                            id="ormValidation"
                            readonly=""
                            style="background-color: rgb(255, 255, 255);"
                            type="text"
                            value=""
                          />
                        </div>
                        <button
                          class="btn btn-next"
                          formnovalidate=""
                          style="text-transform: uppercase;"
                          type="button"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="from-line"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-1"
        >
          <a
            class="btn btn-exit "
            href="/ru/profile-page/admin"
            style="text-transform: uppercase;"
          />
        </div>
        <div
          class="col-md-1 col-md-offset-10"
        >
          <button
            class="btn btn-next"
            style="text-transform: uppercase;"
            type="button"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Testing rendering CustomerWidget should render with empty inputs 1`] = `
<div>
  <div
    class="container new_bid"
  >
    <form>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="title-type"
          >
            Данные заказчика
          </div>
          <div
            class="information-alert"
          >
            <div
              class="information-icon"
            >
              <span
                class="image-icons point"
              />
            </div>
            <div
              class="information-text"
            >
              <div
                class="information"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="form-group"
          >
            <label
              class="radio-inline"
              title=""
            >
              <input
                checked=""
                name="Customer[isLegalPerson]"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="radio-inline"
              title=""
            >
              <input
                name="Customer[isLegalPerson]"
                type="radio"
                value="1"
              />
            </label>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            id="individual"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[lastName]"
                      class="form-control"
                      id="Customer[lastName]"
                      name="Customer[lastName]"
                      type="text"
                      value=""
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[firstName]"
                      class="form-control"
                      id="Customer[firstName]"
                      name="Customer[firstName]"
                      type="text"
                      value=""
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[middleName]"
                      class="form-control"
                      id="Customer[middleName]"
                      name="Customer[middleName]"
                      type="text"
                      value=""
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <input
                    class="form-control"
                    id="Customer[iin]"
                    name="Customer[iin]"
                    style="background-color: rgb(255, 255, 255);"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-group"
              >
                <div />
                <span
                  class="input-group-empty"
                >
                  <input
                    autocomplete="Customer[address]"
                    class="form-control"
                    id="Customer[address]"
                    name="Customer[address]"
                    type="text"
                    value=""
                  />
                  <span
                    class="input-group-addon-empty"
                  />
                </span>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-group"
              >
                <input
                  class="form-control"
                  id="Customer[phoneNumber]"
                  name="Customer[phoneNumber]"
                  style="background-color: rgb(255, 255, 255);"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-12"
            >
              <div>
                <div
                  class="form-group"
                >
                  <label>
                    <span
                      class=""
                    >
                      Доверенность или документ, удостоверяющий полномочия
                    </span>
                  </label>
                  <div>
                    <div
                      style="font-size: 12px;"
                    />
                    <div
                      class="form-group"
                      data-test-id="dropTarget"
                      style="border: 2px dashed #aaa; padding: 10px; cursor: pointer; border-radius: 4px;"
                    >
                      <div
                        style="text-align: center; width: 100%; vertical-align: middle;"
                      >
                        <span
                          class="image-icons plus"
                        />
                      </div>
                    </div>
                    <div
                      class="row"
                    >
                      <div
                        class="col-md-12"
                        style="display: inline-flex;"
                      >
                        <input
                          class="form-control"
                          style="display: none;"
                          type="file"
                        />
                        <div
                          class="full-width"
                        >
                          <input
                            class="form-control form-control"
                            id="ormValidation"
                            readonly=""
                            style="background-color: rgb(255, 255, 255);"
                            type="text"
                            value=""
                          />
                        </div>
                        <button
                          class="btn btn-next"
                          formnovalidate=""
                          style="text-transform: uppercase;"
                          type="button"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="from-line"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-1"
        >
          <a
            class="btn btn-exit "
            href="/ru/profile-page/admin"
            style="text-transform: uppercase;"
          />
        </div>
        <div
          class="col-md-1 col-md-offset-10"
        >
          <button
            class="btn btn-next"
            style="text-transform: uppercase;"
            type="button"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Testing rendering CustomerWidget should render with errors in inputs 1`] = `
<div>
  <div
    class="container new_bid"
  >
    <form>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="title-type"
          >
            Данные заказчика
          </div>
          <div
            class="information-alert"
          >
            <div
              class="information-icon"
            >
              <span
                class="image-icons point"
              />
            </div>
            <div
              class="information-text"
            >
              <div
                class="information"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="form-group"
          >
            <label
              class="radio-inline"
              title=""
            >
              <input
                checked=""
                name="Customer[isLegalPerson]"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="radio-inline"
              title=""
            >
              <input
                name="Customer[isLegalPerson]"
                type="radio"
                value="1"
              />
            </label>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            id="individual"
          >
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group has-error"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[lastName]"
                      class="form-control"
                      id="Customer[lastName]"
                      name="Customer[lastName]"
                      type="text"
                      value=""
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                  <span
                    class="help-block"
                  >
                    undefined «undefined».
                  </span>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group has-error"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[firstName]"
                      class="form-control"
                      id="Customer[firstName]"
                      name="Customer[firstName]"
                      type="text"
                      value=""
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                  <span
                    class="help-block"
                  >
                    undefined «undefined».
                  </span>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col-md-6"
              >
                <div
                  class="form-group"
                >
                  <div />
                  <span
                    class="input-group-empty"
                  >
                    <input
                      autocomplete="Customer[middleName]"
                      class="form-control"
                      id="Customer[middleName]"
                      name="Customer[middleName]"
                      type="text"
                      value=""
                    />
                    <span
                      class="input-group-addon-empty"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col-md-6"
              >
                <div
                  class="form-group has-error"
                >
                  <input
                    class="form-control"
                    id="Customer[iin]"
                    name="Customer[iin]"
                    style="background-color: rgb(255, 255, 255);"
                    type="text"
                    value=""
                  />
                  <span
                    class="help-block"
                  >
                    undefined «undefined».
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-6"
            >
              <div
                class="form-group has-error"
              >
                <div />
                <span
                  class="input-group-empty"
                >
                  <input
                    autocomplete="Customer[address]"
                    class="form-control"
                    id="Customer[address]"
                    name="Customer[address]"
                    type="text"
                    value=""
                  />
                  <span
                    class="input-group-addon-empty"
                  />
                </span>
                <span
                  class="help-block"
                >
                  undefined «undefined».
                </span>
              </div>
            </div>
            <div
              class="col-md-6"
            >
              <div
                class="form-group has-error"
              >
                <input
                  class="form-control"
                  id="Customer[phoneNumber]"
                  name="Customer[phoneNumber]"
                  style="background-color: rgb(255, 255, 255);"
                  type="text"
                  value=""
                />
                <span
                  class="help-block"
                >
                  undefined «undefined».
                </span>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-12"
            >
              <div>
                <div
                  class="form-group"
                >
                  <label>
                    <span
                      class=""
                    >
                      Доверенность или документ, удостоверяющий полномочия
                    </span>
                  </label>
                  <div>
                    <div
                      style="font-size: 12px;"
                    />
                    <div
                      class="form-group"
                      data-test-id="dropTarget"
                      style="border: 2px dashed #aaa; padding: 10px; cursor: pointer; border-radius: 4px;"
                    >
                      <div
                        style="text-align: center; width: 100%; vertical-align: middle;"
                      >
                        <span
                          class="image-icons plus"
                        />
                      </div>
                    </div>
                    <div
                      class="row"
                    >
                      <div
                        class="col-md-12"
                        style="display: inline-flex;"
                      >
                        <input
                          class="form-control"
                          style="display: none;"
                          type="file"
                        />
                        <div
                          class="full-width"
                        >
                          <input
                            class="form-control form-control"
                            id="ormValidation"
                            readonly=""
                            style="background-color: rgb(255, 255, 255);"
                            type="text"
                            value=""
                          />
                        </div>
                        <button
                          class="btn btn-next"
                          formnovalidate=""
                          style="text-transform: uppercase;"
                          type="button"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="from-line"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-1"
        >
          <a
            class="btn btn-exit "
            href="/ru/profile-page/admin"
            style="text-transform: uppercase;"
          />
        </div>
        <div
          class="col-md-1 col-md-offset-10"
        >
          <button
            class="btn btn-next"
            style="text-transform: uppercase;"
            type="button"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;
